fixing main nav on mobile

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -16,6 +16,7 @@
 
 @media only screen and (max-width: 1023px) {}
 
+
 /*on boostrap row break for projects*/
 
 @media only screen and (max-width: 990px) {
@@ -25,16 +26,13 @@
         padding-top: 20px;
         font-size: 40px;
     }
-    
     .section-about h2 {
         font-size: 40px;
     }
-    
     .section-about p {
         text-align: center;
         padding-bottom: 5px;
     }
-    
     section.section-about img {
         height: 30%;
         width: 30%;
@@ -49,7 +47,6 @@
     .social-links {
         display: none;
     }
-    
     .nav {
         display: table;
         margin: 0 auto;
@@ -62,7 +59,6 @@
         padding-right: 50px;
         font-size: 16px;
     }
-    
     #name {
         margin-top: 0;
         padding-top: 0;
@@ -70,7 +66,6 @@
         padding-top: 20px;
         font-size: 40px;
     }
-    
     section.section-about {
         font-family: 'Quicksand', 'Raleway', 'Arial', sans-serif;
         text-align: center;
@@ -79,23 +74,18 @@
         margin-bottom: 8%;
         padding-bottom: 8%;
     }
-    
     .section-about h2 {
         font-size: 40px;
     }
-    
-    
 }
 
 
 /* small phones: from 0 to 480px */
 
-
 @media only screen and (max-width: 480px) {
     .social-links {
         display: none;
     }
-    
     nav {
         margin: 0;
         margin-top: 10%;
@@ -104,68 +94,78 @@
     .main-nav li {
         display: inline-block;
         text-align: center;
-        padding-right: 50px;
-        font-size: 16px;
     }
-    #name {
-        margin-top: 0;
-        padding-top: 0;
-        margin-bottom: 2%;
-        padding-top: 20px;
-        font-size: 34px;
-    }
-    .jumbotron {
-        margin-top: -20px;
-        font-size: 16px;
-    }
-    .jumbotron p#after,
-    #dev {
-        font-size: 16px;
-    }
-    #dev:after {
-        display: block;
-        height: 2px;
-        background-color: #189bc1;
-        content: " ";
-        width: 130px;
-        margin: 0 auto;
-        margin-top: 15px;
-        margin-bottom: 15px;
-    }
-    .footer {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 60px;
-        background-color: #fff;
-        padding-top: 12px;
-        list-style: none;
-    }
-    .footer ul {
-        color: #fff;
-        width: 100%;
-        list-style: none;
-        text-align: center;
-    }
-    .footer ul li {
-        display: inline-block;
-        text-align: center;
-        padding-right: 40px;
-    }
-    section.section-about {
-        font-family: 'Quicksand', 'Raleway', 'Arial', sans-serif;
-        text-align: center;
-        font-weight: 400;
-        margin: 0 5% 5% 5%;
-        margin-bottom: 8%;
-        padding-bottom: 8%;
-    }
-    .section-about p {
-        font-size: 15px;
-        text-align: center;
-        padding-bottom: 10px;
-    }
-    section.section-about img {
-        display: none;
-    }
+
+#name {
+    margin-top: 0;
+    padding-top: 0;
+    margin-bottom: 2%;
+    padding-top: 20px;
+    font-size: 34px;
+}
+
+.jumbotron {
+    margin-top: -20px;
+    font-size: 16px;
+}
+
+.jumbotron p#after,
+#dev {
+    font-size: 16px;
+}
+
+#dev:after {
+    display: block;
+    height: 2px;
+    background-color: #189bc1;
+    content: " ";
+    width: 130px;
+    margin: 0 auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #fff;
+    padding-top: 12px;
+    list-style: none;
+}
+
+.footer ul {
+    color: #fff;
+    width: 100%;
+    list-style: none;
+    text-align: center;
+}
+
+.footer ul li {
+    display: inline-block;
+    text-align: center;
+    padding-right: 40px;
+}
+
+section.section-about {
+    font-family: 'Quicksand', 'Raleway', 'Arial', sans-serif;
+    text-align: center;
+    font-weight: 400;
+    margin: 0 5% 5% 5%;
+    margin-bottom: 8%;
+    padding-bottom: 8%;
+}
+
+.section-about p {
+    font-size: 15px;
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+section.section-about img {
+    display: none;
+}
+
+
 }
