--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,7 +45,6 @@ nav {
     list-style: none;
     margin-top: 40px;
     font-family: 'Quicksand', 'Raleway', 'Arial', sans-serif;
-    padding-bottom: 1px;
 }
 
 .main-nav {
